more tests stuff

--- a/DatabaseVersioning.Tests/DatabaseVersioning.Tests.vbproj
+++ b/DatabaseVersioning.Tests/DatabaseVersioning.Tests.vbproj
@@ -78,6 +78,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Compile Include="TestDataHelper.vb" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="My Project\Resources.resx">
