--- a/DatabaseVersioning.MsSqlDatabaseProvider/DatabaseVersioning.MsSqlDatabaseProvider.vbproj
+++ b/DatabaseVersioning.MsSqlDatabaseProvider/DatabaseVersioning.MsSqlDatabaseProvider.vbproj
@@ -5,13 +5,12 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{C5C097A4-034C-451A-93AC-09562769E073}</ProjectGuid>
-    <OutputType>Exe</OutputType>
-    <StartupObject>DbVersion.Module1</StartupObject>
-    <RootNamespace>DbVersion</RootNamespace>
-    <AssemblyName>DbVersionConsole</AssemblyName>
+    <ProjectGuid>{4BA788ED-D3FA-4286-9F18-21EDE37C4CDD}</ProjectGuid>
+    <OutputType>Library</OutputType>
+    <RootNamespace>DatabaseVersioning</RootNamespace>
+    <AssemblyName>DatabaseVersioning.MsSqlDatabaseProvider</AssemblyName>
     <FileAlignment>512</FileAlignment>
-    <MyType>Console</MyType>
+    <MyType>Windows</MyType>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <OptionExplicit>On</OptionExplicit>
     <OptionCompare>Binary</OptionCompare>
@@ -24,7 +23,7 @@
     <DefineDebug>true</DefineDebug>
     <DefineTrace>true</DefineTrace>
     <OutputPath>bin\Debug\</OutputPath>
-    <DocumentationFile>DbVersionConsole.xml</DocumentationFile>
+    <DocumentationFile>DatabaseVersioning.MsSqlDatabaseProvider.xml</DocumentationFile>
     <NoWarn>42016,41999,42017,42018,42019,42032,42036,42020,42021,42022</NoWarn>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
@@ -33,13 +32,12 @@
     <DefineTrace>true</DefineTrace>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
-    <DocumentationFile>DbVersionConsole.xml</DocumentationFile>
+    <DocumentationFile>DatabaseVersioning.MsSqlDatabaseProvider.xml</DocumentationFile>
     <NoWarn>42016,41999,42017,42018,42019,42032,42036,42020,42021,42022</NoWarn>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Data" />
-    <Reference Include="System.Deployment" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
@@ -62,7 +60,7 @@
     <Import Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Module1.vb" />
+    <Compile Include="MsSqlDatabaseProvider.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
       <AutoGen>True</AutoGen>
@@ -99,10 +97,6 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\DatabaseVersioning.MsSqlDatabaseProvider\DatabaseVersioning.MsSqlDatabaseProvider.vbproj">
-      <Project>{4BA788ED-D3FA-4286-9F18-21EDE37C4CDD}</Project>
-      <Name>DatabaseVersioning.MsSqlDatabaseProvider</Name>
-    </ProjectReference>
     <ProjectReference Include="..\DatabaseVersioning\DatabaseVersioning.vbproj">
       <Project>{8EB5E493-1B5B-4721-A3D5-123D4339B660}</Project>
       <Name>DatabaseVersioning</Name>
