--- a/DatabaseVersioning/DatabaseVersioning.vbproj
+++ b/DatabaseVersioning/DatabaseVersioning.vbproj
@@ -62,6 +62,7 @@
   <ItemGroup>
     <Compile Include="DbVersionManager.vb" />
     <Compile Include="IDatabaseProvider.vb" />
+    <Compile Include="MessageLoggedEventArgs.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
       <AutoGen>True</AutoGen>
