changed name of project and name of executable that is generated by console project; started working on readme file

--- a/DbVersionConsole/Cinch.vbproj
+++ b/DbVersionConsole/Cinch.vbproj
@@ -9,7 +9,7 @@
     <OutputType>Exe</OutputType>
     <StartupObject>DbVersion.Module1</StartupObject>
     <RootNamespace>DbVersion</RootNamespace>
-    <AssemblyName>DbVersionConsole</AssemblyName>
+    <AssemblyName>cinch</AssemblyName>
     <FileAlignment>512</FileAlignment>
     <MyType>Console</MyType>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
@@ -24,7 +24,7 @@
     <DefineDebug>true</DefineDebug>
     <DefineTrace>true</DefineTrace>
     <OutputPath>bin\Debug\</OutputPath>
-    <DocumentationFile>DbVersionConsole.xml</DocumentationFile>
+    <DocumentationFile>cinch.xml</DocumentationFile>
     <NoWarn>42016,41999,42017,42018,42019,42032,42036,42020,42021,42022</NoWarn>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
@@ -33,7 +33,7 @@
     <DefineTrace>true</DefineTrace>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
-    <DocumentationFile>DbVersionConsole.xml</DocumentationFile>
+    <DocumentationFile>cinch.xml</DocumentationFile>
     <NoWarn>42016,41999,42017,42018,42019,42032,42036,42020,42021,42022</NoWarn>
   </PropertyGroup>
   <ItemGroup>
@@ -107,6 +107,11 @@
       <Project>{8EB5E493-1B5B-4721-A3D5-123D4339B660}</Project>
       <Name>DatabaseVersioning</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="readme.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
