--- a/DatabaseVersioning.MsSqlDatabaseProvider/DatabaseVersioning.MsSqlDatabaseProvider.vbproj
+++ b/DatabaseVersioning.MsSqlDatabaseProvider/DatabaseVersioning.MsSqlDatabaseProvider.vbproj
@@ -11,7 +11,7 @@
     <AssemblyName>DatabaseVersioning.MsSqlDatabaseProvider</AssemblyName>
     <FileAlignment>512</FileAlignment>
     <MyType>Windows</MyType>
-    <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <OptionExplicit>On</OptionExplicit>
     <OptionCompare>Binary</OptionCompare>
     <OptionStrict>Off</OptionStrict>
@@ -35,6 +35,7 @@
     <IsWebBootstrapper>false</IsWebBootstrapper>
     <UseApplicationTrust>false</UseApplicationTrust>
     <BootstrapperEnabled>true</BootstrapperEnabled>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
